# advent_of_code_2025

./: .gitignore  README.md  add_day.sh  pyproject.toml
src/: dial.py  main.py
src/days/: 01.py  __init__.py  _template.py  d01.py  d02.py  d03.py  d04.py  d05.py  d06.py
src/engine/: dial.py
src/utils/: constant.py  file.py  print.py
story/: day_1.md
tests/: _template.py  _template_test.py  test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py  test_day_06.py  test_dial.py  test_utils_file.py  utils.py
