[project]
name = "advent-of-code-2025"
version = "0.1.0"
description = "Advent of code 2025"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "colorama>=0.4.6",
]

[dependency-groups]
dev = ["pytest>=9.0.1"]

[tool.pytest.ini_options]
pythonpath = "./src"
testpaths = ["./tests"]
